Added validation for mobile number format during employee creation (both frontend and backend) + Minor UI Changes on dropdowns and req.flash

--- a/views/detailed_employee.hbs
+++ b/views/detailed_employee.hbs
@@ -229,7 +229,7 @@
                                     <div class="col" style="padding-top: 5px;">
                                         <div class="d-flex flex-column">
                                             <span class="text-danger font-weight-bold">Employee is not yet subscribed to Globelabs API!</span>
-                                            <span class="text-danger font-weight-bold">Instruct employee to send "INFO" to 21663543</span>
+                                            <span class="text-danger font-weight-bold">Instruct employee to send "INFO" to 21663543.</span>
                                         </div>
                                             
                                     </div>
