--- a/views/pest_disease_discover.hbs
+++ b/views/pest_disease_discover.hbs
@@ -175,7 +175,7 @@
                         </div>
                         <div class="col">
                             <div class="mb-3"><label class="form-label" for="username"><strong>Type</strong><br /></label>
-                                <select class="form-control required details_new" id="pd_type" name="pd_type" form="new_pd_form">
+                                <select class="form-select required details_new" id="pd_type" name="pd_type" form="new_pd_form">
                                         <option value="Pest">Pest</option>
                                         <option value="Disease">Disease</option>
                                 </select>
