--- a/views/farm_productivity_report.hbs
+++ b/views/farm_productivity_report.hbs
@@ -453,7 +453,7 @@
 														<td>Harvest Report</td>
 														<td>{{this.min_start}} - {{this.max_end}}</td>
 														<td>{{this.crop_plan}}</td>
-														<td>
+														<td class="{{this.status}}">
 															{{this.status}}
 															<span>
 																<div class="dropdown no-arrow" style="display:inline-block; float: right">
