--- a/views/farms.hbs
+++ b/views/farms.hbs
@@ -160,7 +160,7 @@
                                                  {{#each wo_list}}
                                                  
                                                    <tr role="row">
-                                                        <td>WO-{{this.work_order_id}}</td>
+                                                        <td>{{this.work_order_id}}</td>
                                                         <td>{{this.farm_name}}</td>
                                                         <td>{{this.type}}</td>
                                                         <td>{{this.crop_plan}}</td>
