--- a/views/detailed_employee.hbs
+++ b/views/detailed_employee.hbs
@@ -16,7 +16,7 @@
                     
                     <div class="col" style="max-width: 70px; padding-top: 2px">
 
-                        <button type="submit" class="btn btn-primary btn-md" id="back" onclick='history.back()'> <!-- Replace later to window.location -->
+                        <button type="submit" class="btn btn-primary btn-md" id="back" onclick='window.location="/user_management"'> <!-- Replace later to window.location -->
                             <i class="far fa-long-arrow-left d-lg-flex justify-content-lg-center" id="backIcon"></i>
                         </button>        
 
@@ -140,7 +140,7 @@
                                             <label for="last_name">Assigned Farm Manager:</label>
                                             <div class="d-flex">
                                                 <div>{{farm_mngr.last_name}}, {{farm_mngr.first_name}}</div>
-                                                <div class="ml-auto mr-5 font-weight-bold"><a href="/sms/messages#activeMessages">Contact</a></div>
+                                                <div class="ml-auto mr-5 font-weight-bold"><a href="/sms/messages#activeMessages" class="viewDetails">Contact</a></div>
                                             </div>
                                         </div>
 
@@ -174,7 +174,7 @@
                             </div>
                             {{/compareTwoValues}}
 
-                            {{#compareTwoValues employee_details.position 'Office Worker' operator='==='}}
+                            {{!-- {{#compareTwoValues employee_details.position 'Office Worker' operator='==='}}
                                 <h5 for="" style="font-weight: bold; padding-bottom: 20px; padding-top: 10px">Login Information</h5>
 
                                 {{> messages}}
@@ -219,7 +219,7 @@
 
                                     </div>
                                 </div>
-                            {{/compareTwoValues}}
+                            {{/compareTwoValues}} --}}
 
                             {{#if employee_details.access_token}}
 
@@ -264,7 +264,7 @@
 </div>
 
 <script>
-    var view = "detailed_user";
+    var view = "detailed_employee";
     function goBack() {
       window.history.back();
     }
