--- a/views/user_management.hbs
+++ b/views/user_management.hbs
@@ -35,12 +35,12 @@
                 <div class="card-header d-flex justify-content-between align-items-center" style="background: #939C1F;color: #ffffff; height:auto">
 
                     <ul class="nav nav-tabs card-header-tabs" id="nav-tab" role="tablist">
-                        <li class="nav-item"><a id="active-subscriptions-tab" class="nav-link active" data-toggle="tab" href="#activeUsers"role="tab" aria-controls="activeUsers" aria-selected="true" 
+                        <li class="nav-item"><a id="active-users-tab" class="nav-link active" data-toggle="tab" href="#activeUsers"role="tab" aria-controls="activeUsers" aria-selected="true" 
                             style="background: #F0F0F0;">Active Users</a></li>
-                        <li class="nav-item"><a id="active-subscriptions-tab" class="nav-link" data-toggle="tab" href="#activeEmployees"role="tab" aria-controls="activeEmployees" aria-selected="false" 
+                        <li class="nav-item"><a id="active-employees-tab" class="nav-link" data-toggle="tab" href="#activeEmployees"role="tab" aria-controls="activeEmployees" aria-selected="false" 
                         style="background: #F0F0F0;">Active Employees</a></li>
 
-                        <li class="nav-item"><a id="inactive-subscriptions-tab" class="nav-link" data-toggle="tab" href="#inactiveUsers"role="tab" aria-controls="inactiveUsers" aria-selected="false" 
+                        <li class="nav-item"><a id="inactive-employees-tab" class="nav-link" data-toggle="tab" href="#inactiveEmployees"role="tab" aria-controls="inactiveUsers" aria-selected="false" 
                             style="background: #F0F0F0;">Inactive Employees</a></li>
                     </ul>
 
@@ -72,14 +72,14 @@
                                             {{this.last_name}}, {{this.first_name}}
                                             <!-- <input type="hidden" name="register_id" value="{{this.employee_id}}"> -->
                                           </td>
-                                          <td class="text-left"><div>{{this.position}}</div><div class="text-xs text-muted">{{#if this.farm_name}}{{this.farm_name}}{{else}}Unassigned{{/if}}</div></td>
+                                          <td class="text-left">{{this.position}}<div class="text-xs text-muted">{{#if this.farm_name}}{{this.farm_name}}{{else}}Unassigned{{/if}}</div></td>
                                           <td>0{{this.phone_number}}</td>
                                           <td>
                                             <select class="form-select" name="register_level" disabled required>
                                               <option selected value="">...</option>
-                                              <option value="0" {{#compareTwoValues this.access_level 0 operator='==='}}selected{{/compareTwoValues}}>Administrator</option>
-                                              <option value="1" {{#compareTwoValues this.access_level 1 operator='==='}}selected{{/compareTwoValues}}>Office Worker</option>
-                                              <option value="2" {{#compareTwoValues this.access_level 2 operator='==='}}selected{{/compareTwoValues}}>Purchase Officer</option>
+                                              <option value="0" {{#compareTwoValues this.access_level 0 operator='==='}}selected{{/compareTwoValues}}>{{#compareTwoValues this.access_level 0 operator='==='}}Administrator{{else}} {{/compareTwoValues}}</option>
+                                              <option value="1" {{#compareTwoValues this.access_level 1 operator='==='}}selected{{/compareTwoValues}}>{{#compareTwoValues this.access_level 1 operator='==='}}Office Worker{{else}} {{/compareTwoValues}}</option>
+                                              <option value="2" {{#compareTwoValues this.access_level 2 operator='==='}}selected{{/compareTwoValues}}>{{#compareTwoValues this.access_level 2 operator='==='}}Purchase Officer{{else}} {{/compareTwoValues}}</option>
                                             </select>
                                           </td>
                                           <td>
@@ -117,7 +117,7 @@
                                 {{!-- END OF TAB 1 --}}
 
                                 {{!-- TAB 2 --}}
-                                <div class="tab-pane fade" id="activeEmployees" role="tabpanel" aria-labelledby="inactive-users-tab">
+                                <div class="tab-pane fade" id="activeEmployees" role="tabpanel" aria-labelledby="active-employees-tab">
                                     <table class="table table-striped table-bordered tablesorter" id="activeEmployeesTable">
                                       <thead class="thead-dark" style="background-color: #212529 !important">
                                       <tr>
@@ -135,7 +135,7 @@
                                             {{this.last_name}}, {{this.first_name}}
                                             <!-- <input type="hidden" name="register_id" value="{{this.employee_id}}"> -->
                                           </td>
-                                          <td class="text-left"><div>{{this.position}}</div><div class="text-xs text-muted">{{#if this.farm_name}}{{this.farm_name}}{{else}}Unassigned{{/if}}</div></td>
+                                          <td class="text-left">{{this.position}}<div class="text-xs text-muted">{{#if this.farm_name}}{{this.farm_name}}{{else}}Unassigned{{/if}}</div></td>
                                           <td>0{{this.phone_number}}</td>
                                           <td>
                                             <select class="form-select" name="register_level" disabled required>
@@ -173,7 +173,7 @@
                                 {{!-- END OF TAB 2 --}}
 
                                 {{!-- TAB 3 --}}
-                                <div class="tab-pane fade" id="inactiveUsers" role="tabpanel" aria-labelledby="inactive-users-tab">
+                                <div class="tab-pane fade" id="inactiveEmployees" role="tabpanel" aria-labelledby="inactive-employees-tab">
                                     <table class="table table-striped table-bordered tablesorter" id="inactiveEmployeesTable">
                                       <thead class="thead-dark" style="background-color: #212529 !important">
                                       <tr>
@@ -190,7 +190,7 @@
                                             {{this.last_name}}, {{this.first_name}}
                                             <!-- <input type="hidden" name="register_id" value="{{this.employee_id}}"> -->
                                           </td>
-                                          <td class="text-left"><div>{{this.position}}</div><div class="text-xs text-muted">{{#if this.farm_name}}{{this.farm_name}}{{else}}Unassigned{{/if}}</div></td>
+                                          <td class="text-left">{{this.position}}<div class="text-xs text-muted">{{#if this.farm_name}}{{this.farm_name}}{{else}}Unassigned{{/if}}</div></td>
                                           <td>0{{this.phone_number}}</td>
                                           <td>
                                             <select class="form-select" name="register_level" disabled required>
