add SMS employee farm & position

--- a/views/sms_messages.hbs
+++ b/views/sms_messages.hbs
@@ -313,8 +313,9 @@ img {
                                             {{!-- MESSAGES --}}
 
                                                 <div class="headind_srch" style="background-color: white;">
-                                                <div class="recent_heading">
-                                                <h4 id="texter_name"></h4>
+                                                <div class="recent_heading"  style="width : 100% !important">
+                                                    <h4 id="texter_name"></h4> 
+                                                    <span id="texter_details" style="color:#646464"></span>
                                                 </div>
                                                 
                                                 </div>
