Added update functionality for employees

--- a/views/add_employee.hbs
+++ b/views/add_employee.hbs
@@ -63,13 +63,13 @@
 
                                 <div class="col" style="padding-top: 5px;">
                                 <label for="mobile_number">Mobile Number </label>
-                                <input type="text" class="form-control" id="mobile_number" placeholder="e.g., 09123456789" pattern="[0]{1}[9]{1}[0-9]{9}" class="form-control" maxlength="11" required name="phone_number" required></input>
+                                <input type="text" class="form-control" id="phone_number" placeholder="e.g., 09123456789" pattern="[0]{1}[9]{1}[0-9]{9}" class="form-control" maxlength="11" required name="phone_number" required></input>
 
                                 </div>
 
                                 <div class="col" style="padding-top: 5px;">
                                 <label for="position">Position </label>
-                                <select class="form-control" id="position" name="position" required>
+                                <select class="form-select" id="position" name="position" required>
                                     <option>...</option>
                                     <option value="Office Worker">Office Worker</option>
                                     <option value="Farm Manager">Farm Manager</option>
@@ -87,7 +87,7 @@
 
                                         <div class="col" style="padding-top: 5px;">
                                             <label for="last_name">Farm Assignment</label>
-                                            <select class="form-control" id="farm_assignment" name="farm_assignment">
+                                            <select class="form-select" id="farm_assignment" name="farm_assignment">
                                                 <option>...</option>
                                             </select>
                                         </div>
