--- a/views/detailed_employee.hbs
+++ b/views/detailed_employee.hbs
@@ -74,24 +74,26 @@
                 <div class="card-body">
 
                     {{!-- START FORM --}}
-                    <form id="register_employee" action="/register_employee" method="post">
+                    <form id="update_employee" action="/update_employee" method="post">
 
                     <div class="tab">
                     <div class="modal_body_content" id="body_step1">
                             <h5 for="" style="font-weight: bold; padding-bottom: 20px; padding-top: 10px">Employee Information</h5>
+
+                            {{> messages}}
 
                             <div class="form-group" style="margin-left: 5px;">
                               <div class="row">
 
                                 <div class="col" style="padding-top: 5px;">
                                 <label for="last_name">Last Name </label>
-                                <input type="text" class="form-control" id="last_name" placeholder="Last name..." name="last_name" value="{{employee_details.last_name}}" required disabled></input>
+                                <input type="text" class="form-control" id="last_name" placeholder="{{employee_details.last_name}}" name="last_name" value="{{employee_details.last_name}}" required></input>
 
                                 </div>
 
                                 <div class="col" style="padding-top: 5px;">
                                 <label for="first_name">First Name </label>
-                                <input type="text" class="form-control" id="first_name" placeholder="First name..." name="first_name" value="{{employee_details.first_name}}" required disabled></input>
+                                <input type="text" class="form-control" id="first_name" placeholder="{{employee_details.first_name}}" name="first_name" value="{{employee_details.first_name}}" required></input>
 
                                 </div>
 
@@ -103,14 +105,13 @@
 
                                 <div class="col" style="padding-top: 5px;">
                                 <label for="mobile_number">Mobile Number </label>
-                                <input type="text" class="form-control" id="mobile_number" placeholder="..." name="phone_number" value="{{employee_details.phone_number}}" required disabled></input>
+                                <input type="text" class="form-control" id="mobile_number" placeholder="0{{employee_details.phone_number}}"  pattern="[0]{1}[9]{1}[0-9]{9}" maxlength="11" name="phone_number" value="0{{employee_details.phone_number}}" required></input>
 
                                 </div>
 
                                 <div class="col" style="padding-top: 5px;">
                                 <label for="position">Position </label>
-                                <select class="form-control" id="position" name="position" required disabled>
-                                    <option>...</option>
+                                <select class="form-select" id="position" name="position" required>
                                     <option value="Office Worker" {{#compareTwoValues employee_details.position 'Office Worker' operator='==='}}selected{{/compareTwoValues}}>Office Worker</option>
                                     <option value="Farm Manager" {{#compareTwoValues employee_details.position 'Farm Manager' operator='==='}}selected{{/compareTwoValues}}>Farm Manager</option>
                                     <option value="Farmer" {{#compareTwoValues employee_details.position 'Farmer' operator='==='}}selected{{/compareTwoValues}}>Farmer</option>
@@ -128,7 +129,7 @@
 
                                         <div class="col" style="padding-top: 5px;">
                                             <label for="last_name">Farm Assignment</label>
-                                            <select class="form-control" id="farm_assignment" name="farm_assignment" disabled>
+                                            <select class="form-select" id="farm_assignment" name="farm_assignment">
                                                 <option>...</option>
                                                 {{#each farm_list}}
                                                 <option value="{{this.farm_id}}" {{#compareTwoValues ../employee_details.farm_id this.farm_id operator='==='}}selected{{/compareTwoValues}}>{{this.farm_name}}</option>
@@ -156,7 +157,7 @@
 
                                         <div class="col" style="padding-top: 5px;">
                                             <label for="last_name">Farm Assignment</label>
-                                            <select class="form-control" id="farm_assignment" name="farm_assignment" disabled>
+                                            <select class="form-select" id="farm_assignment" name="farm_assignment">
                                                 <option>...</option>
                                                 {{#each farm_list}}
                                                 <option value="{{this.farm_id}}" {{#compareTwoValues ../employee_details.farm_id this.farm_id operator='==='}}selected{{/compareTwoValues}}>{{this.farm_name}}</option>
@@ -173,6 +174,31 @@
                                 </div>
                             </div>
                             {{/compareTwoValues}}
+                            
+                            {{#compareTwoValues employee_details.position 'Office Worker' operator='==='}}
+                            <div class="" id="farm_assignment_cont" style="display:none">
+                                <div class="form-group" style="margin-left: 5px;">
+                                    <div class="row">
+
+                                        <div class="col" style="padding-top: 5px;">
+                                            <label for="farm_assignment_new">Farm Assignment</label>
+                                            <select class="form-select" id="farm_assignment" name="farm_assignment">
+                                                <option>...</option>
+                                            </select>
+                                        </div>
+
+                                        <div class="col">
+                                            
+                                        </div>
+
+                                    </div>
+
+                                </div>
+                            </div>
+                            {{/compareTwoValues}}
+              
+                            <input type="hidden" name="employee_id" id="employee_id" value="{{employee_details.employee_id}}">
+
 
                             {{!-- {{#compareTwoValues employee_details.position 'Office Worker' operator='==='}}
                                 <h5 for="" style="font-weight: bold; padding-bottom: 20px; padding-top: 10px">Login Information</h5>
@@ -250,7 +276,8 @@
 
                     <div class="modal-footer">
                         <div class="modal_footer_content" id="_step1">
-                            <!-- <button type="submit" class="btn round btn-primary" form="register_employee">Create</button> -->
+                            <button type="button" class="btn round btn-secondary" onclick='window.location="/user_management"'>Cancel</button>
+                            <button type="submit" class="btn round btn-primary" form="update_employee">Save</button>
                         </div>
                             
                       </div>
@@ -330,8 +357,10 @@
         position = $(this).val();
         str = `<option>...</option>`;
         $('#farm_assignment_cont').addClass('hide');
+        $('#farm_assignment_cont').hide();
         if (position == 'Farmer' || position == 'Farm Manager') {
             $('#farm_assignment_cont').removeClass('hide');
+            $('#farm_assignment_cont').toggle();
 
             if (position == 'Farmer') {
                 $.get('/get_farm_list', {}, function(result) {
@@ -350,7 +379,8 @@
             $('#farm_assignment').append(str);
         }
         else if (position == 'Office Worker') {
-
+           str = `<option selected>...</option>`;
+           $('#farm_assignment').append(str);
         }     
     });
 </script>
